--- a/samples/sync_shared_files.ipynb
+++ b/samples/sync_shared_files.ipynb
@@ -3,124 +3,194 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "from tqdm import tqdm\r\n",
-    "\r\n",
-    "from fetchbim.notion import NotionDatabase\r\n",
-    "from fetchbim.query import SharedFile\r\n",
-    "from fetchbim.teams import sync_complete_msg"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "from fetchbim.notion import Database, get_all_pages\n",
+    "from fetchbim.fetch import SharedRule\n",
+    "# from fetchbim.teams import sync_complete_msg"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "db_rules = SharedFile.get_all()\r\n",
-    "print(\"{} rules in database\".format(len(db_rules)))\r\n",
-    "# Notion to Admin and back\r\n",
-    "rules = NotionDatabase.get_all('Shared Rules')\r\n",
-    "print(\"{} rules in Notion\".format(len(rules)))"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "120 rules in database\n",
-      "120 rules in Notion\n"
+      "134 rules in database\n",
+      "136 rules in Notion\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "db_rules = SharedRule.get_shared_rules()\n",
+    "print(\"{} rules in database\".format(len(db_rules)))\n",
+    "# Notion to Admin and back\n",
+    "rules = get_all_pages('fd52b1109cf04974b9a76f71a25afc18')\n",
+    "print(\"{} rules in Notion\".format(len(rules)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RelationProperty(id='FVh%7B', type='relation', relation=[Relation(id=UUID('95781a3e-deaf-4676-830d-e21509dc778c')), Relation(id=UUID('e5a36908-bfdf-442c-ae8e-03c877e3b920')), Relation(id=UUID('f8a639f8-e651-45cc-a57a-9d297f1f8be9')), Relation(id=UUID('6b2e34ac-4f08-4d81-8d6a-80c8f58756ee')), Relation(id=UUID('cd8f8b0d-aad6-4ff2-9689-b8b63623f80c')), Relation(id=UUID('40c862d5-b0d9-492a-9f52-c943d0a7f970')), Relation(id=UUID('3ef29944-7ca4-433c-a9ba-7c6f46c2d214')), Relation(id=UUID('2a6fecc9-74bf-40e6-965e-b68ba88adfbb'))])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rules[0].properties['SharedAttributes']\n",
+    "\n",
+    "# for prop in rules[0].properties:\n",
+    "#     print(prop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "8 validation errors for SharedRule\nAttributes -> 0\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 1\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 2\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 3\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 4\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 5\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 6\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 7\n  value is not a valid dict (type=type_error.dict)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mz:\\Kyle\\Python Projects\\fetchbim\\samples\\sync_shared_files.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/z%3A/Kyle/Python%20Projects/fetchbim/samples/sync_shared_files.ipynb#ch0000005?line=0'>1</a>\u001b[0m sr \u001b[39m=\u001b[39m SharedRule\u001b[39m.\u001b[39;49mfrom_notion_page(rules[\u001b[39m0\u001b[39;49m])\n",
+      "File \u001b[1;32m\\\\192.168.10.8\\share\\kyle\\python projects\\fetchbim\\fetchbim\\fetch\\shared_rule.py:45\u001b[0m, in \u001b[0;36mSharedRule.from_notion_page\u001b[1;34m(cls, page)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m     44\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_notion_page\u001b[39m(\u001b[39mcls\u001b[39m, page: Page) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m SharedRule:\n\u001b[1;32m---> 45\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39;49m(\n\u001b[0;32m     46\u001b[0m         name\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mDescription\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     47\u001b[0m         category_name\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mCategoryName\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     48\u001b[0m         family_object_type\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mFamilyObjectType\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     49\u001b[0m         deleted\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mDeleted\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     50\u001b[0m         parameter_name\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mParameterName\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     51\u001b[0m         parameter_value\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mParameterValue\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     52\u001b[0m         parameter_match_type\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mParameterValueMatchType\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     53\u001b[0m         files\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mFiles\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     54\u001b[0m         attributes\u001b[39m=\u001b[39;49mpage\u001b[39m.\u001b[39;49mproperties[\u001b[39m\"\u001b[39;49m\u001b[39mSharedAttributes\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mget_value(),\n\u001b[0;32m     55\u001b[0m     )\n",
+      "File \u001b[1;32mz:\\Kyle\\Python Projects\\fetchbim\\venv\\lib\\site-packages\\pydantic\\main.py:331\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValidationError\u001b[0m: 8 validation errors for SharedRule\nAttributes -> 0\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 1\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 2\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 3\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 4\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 5\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 6\n  value is not a valid dict (type=type_error.dict)\nAttributes -> 7\n  value is not a valid dict (type=type_error.dict)"
+     ]
+    }
+   ],
+   "source": [
+    "sr = SharedRule.from_notion_page(rules[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mz:\\Kyle\\Python Projects\\fetchbim\\samples\\sync_shared_files.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/z%3A/Kyle/Python%20Projects/fetchbim/samples/sync_shared_files.ipynb#ch0000007?line=0'>1</a>\u001b[0m sr\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sr' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sr"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "for rule in tqdm(rules):\r\n",
-    "    # notion to python object\r\n",
-    "    shared_rule = SharedFile.from_notion(rule)\r\n",
-    "    # object to DB\r\n",
-    "    shared_rule.post()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "100%|██████████| 120/120 [06:52<00:00,  3.44s/it]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "for rule in tqdm(rules):\n",
+    "    # notion to python object\n",
+    "    shared_rule = SharedRule.from_notion(rule)\n",
+    "    # object to DB\n",
+    "    shared_rule.post()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "# # Clean slate in notion\r\n",
-    "SharedFile.archive_notion('Shared Rules')\r\n",
-    "SharedFile.archive_notion('Shared Attributes')"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# # Clean slate in notion\n",
+    "SharedFile.archive_notion('Shared Rules')\n",
+    "SharedFile.archive_notion('Shared Attributes')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "table_dict = {}\r\n",
-    "count = 0\r\n",
-    "# DB data to notion\r\n",
-    "db_rules = SharedFile.get_all()\r\n",
-    "shared_rules_ids = [x['SharedFileId'] for x in db_rules]\r\n",
-    "for id_ in tqdm(shared_rules_ids):\r\n",
-    "    sf = SharedFile.from_json(id_)\r\n",
-    "    sf.to_notion()\r\n",
-    "    count += 1\r\n",
-    "\r\n",
-    "table_dict['Total Shared Rules'] = count\r\n",
-    "sync_complete_msg(\r\n",
-    "    title=\"Shared Rule Sync Complete\",\r\n",
-    "    message=\"Two way sync between Notion 'Shared Rules' database and admin 'Shared Files' successfully completed\",\r\n",
-    "    button=(\"Shared Rules\", \"https://www.notion.so/fetchbim/fd52b1109cf04974b9a76f71a25afc18\"),\r\n",
-    "    table_dict=table_dict\r\n",
-    ")"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "100%|██████████| 120/120 [16:31<00:00,  8.26s/it]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "table_dict = {}\n",
+    "count = 0\n",
+    "# DB data to notion\n",
+    "db_rules = SharedFile.get_all()\n",
+    "shared_rules_ids = [x['SharedFileId'] for x in db_rules]\n",
+    "for id_ in tqdm(shared_rules_ids):\n",
+    "    sf = SharedFile.from_json(id_)\n",
+    "    sf.to_notion()\n",
+    "    count += 1\n",
+    "\n",
+    "table_dict['Total Shared Rules'] = count\n",
+    "sync_complete_msg(\n",
+    "    title=\"Shared Rule Sync Complete\",\n",
+    "    message=\"Two way sync between Notion 'Shared Rules' database and admin 'Shared Files' successfully completed\",\n",
+    "    button=(\"Shared Rules\", \"https://www.notion.so/fetchbim/fd52b1109cf04974b9a76f71a25afc18\"),\n",
+    "    table_dict=table_dict\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "kernelspec": {
+   "display_name": "Python 3.10.2 ('venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.5",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('venv': venv)"
-  },
-  "interpreter": {
-   "hash": "8a517bb6487a6d0afee10a2839dbc59124d20f7320cb08b34273c7e0d80d8489"
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6d505efb51d765ea8321fddb09b311db5528d8d5e9bff0b1b7bdda455f331c73"
+   }
   }
  },
  "nbformat": 4,
